Bug 30117 - Updates to my own presence are not signalled on connections supporting privacy lists
Summary: Updates to my own presence are not signalled on connections supporting privac...
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: git master
Hardware: Other All
: medium major
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://git.collabora.co.uk/?p=user/wj...
Whiteboard: review+
Keywords: patch
Depends on:
Blocks: 30161
  Show dependency treegraph
 
Reported: 2010-09-10 07:06 UTC by Will Thompson
Modified: 2010-09-14 02:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Will Thompson 2010-09-10 07:06:32 UTC
I noticed that Empathy gets confused as to what my own status is. This turns out to be because some (but not all) of my XMPP connections fail to signal PresencesChanged() for the self-handle; the affected XMPP connections are those that support privacy lists.

Having poked around, I believe it's caused by not calling emit_one_presence_update() on approximately any of the code paths for connections supporting privacy lists or XEP-0186 invisibility. Eek! There are a lot of code paths these days.
Comment 1 Will Thompson 2010-09-10 07:13:58 UTC
(Raising severity: this makes setting your presence appear not to work.)
Comment 2 Will Thompson 2010-09-13 10:19:25 UTC
I loathe Bugzilla more and more with every passing day.

Also I fixed this bug.
Comment 3 Simon McVittie 2010-09-13 10:25:57 UTC
I endorse this initiative.
Comment 4 Simon McVittie 2010-09-14 02:30:21 UTC
Fixed in git for 0.9.18.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.